--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 #container {
 	width: 300px;
-	height: 700px;
+	height: 650px;
 	background-color: #333;
 	margin-left: auto;
 	margin-right: auto;
@@ -30,6 +30,13 @@ body {
 	padding-bottom: 3px;
 	font-weight: bold;
 	color: white;
+}
+#echo_container {
+	position: absolute;
+	top: 360px;
+	height: 300px;
+	width: 300px;
+	overflow: hidden;
 }
 #fb_connect {
 	margin-top: 40px;
@@ -110,7 +117,7 @@ li {
 }
 	#splash_container {
 	width: 300px;
-	height: 700px;
+	height: 650px;
 	position: absolute;
 	z-index:5;
 	background-color: red;
@@ -126,10 +133,10 @@ li {
 }
 #tb_widget {
 	width: 300px;
-	height: 700px;
+	height: 650px;
 	position: absolute;
 	z-index:0;
-	background-color:black;
+	background-color: #333;
 	}
 ul {
 	padding: 0;
@@ -141,6 +148,6 @@ ul {
 	position: absolute;
 	top: 60px;
 	width: 300px;
-	height: 500px;
+	height: 300px;
 	background-color: grey;
 }
